Began slicing up detectors

--- a/Open Cluster Plots.ipynb
+++ b/Open Cluster Plots.ipynb
@@ -5,7 +5,7 @@
    "execution_count": 1,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -29,7 +29,18 @@
     }
    ],
    "source": [
-    "run run_residuals -v -o 2"
+    "run run_residuals -v -o 2 -l 50,200"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ocmodel1 = acs.pklread('clusters/pickles/models/model.pkl')"
    ]
   },
   {
