Running red clump sample on server

--- a/empca.ipynb
+++ b/empca.ipynb
@@ -2033,9 +2033,30 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python2.7/site-packages/setuptools-18.7.1-py2.7.egg/pkg_resources/__init__.py:1266: UserWarning: /home/price-jones/.python-eggs is writable by group/others and vulnerable to attack when used with get_resource_filename. Consider a more secure location (set with .set_extraction_path or the PYTHON_EGG_CACHE environment variable).\n",
+      "/home/price-jones/Code/apogee/apogee/spec/window.py:88: RuntimeWarning: invalid value encountered in greater\n",
+      "  mask= ((win > 0.)*(True-numpy.isnan(win))).astype('int')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python2.7/site-packages/IPython/kernel/__init__.py:13: ShimWarning: The `IPython.kernel` package has been deprecated. You should import from ipykernel or jupyter_client instead.\n",
+      "  \"You should import from ipykernel or jupyter_client instead.\", ShimWarning)\n",
+      "\n",
+      "badpix,  0\n",
+      "       iter        R2             rchi2"
+     ]
+    }
+   ],
    "source": [
     "run run_empca -vug -m red_clump/pickles/models/model_TEFF_u4800.0_d4750.0.pkl -d 2e-3 -n 14"
    ]
@@ -2474,7 +2495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.5"
   }
  },
  "nbformat": 4,
