Ran empca on server

--- a/empca.ipynb
+++ b/empca.ipynb
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1091,7 +1091,58 @@
      "text": [
       "PIXEL SPACE\n",
       "number of unusable pixels,  0\n",
-      "nans "
+      "nans  (array([], dtype=int64), array([], dtype=int64))\n",
+      "       iter        R2             rchi2\n",
+      "EMPCA  1/25       0.02071125      2.88909813\n",
+      "EMPCA  2/25       0.17987991      2.30362178\n",
+      "EMPCA  3/25       0.22708775      2.16840201\n",
+      "EMPCA  4/25       0.26864498      2.04051172\n",
+      "EMPCA  5/25       0.30290608      1.95663768\n",
+      "EMPCA  6/25       0.30874821      1.94240232\n",
+      "EMPCA  7/25       0.31054575      1.93752137\n",
+      "R2: 0.315435426776\n",
+      "Pixel runtime (unweighted):\t0.965442717075  min\n",
+      "Pixel runtime (weighted):\t0.925850399335  min\n",
+      "var, Vnoise  6.72494487574e-05 4.63483064969e-05\n",
+      "var, Vnoise  6.72494487574e-05 4.63483064969e-05\n",
+      "ELEMENT SPACE\n",
+      "nan  (array([], dtype=int64), array([], dtype=int64))\n",
+      "       iter        R2             rchi2\n",
+      "EMPCA  1/25      -1.48783293 52497318925627.71875000\n",
+      "EMPCA  2/25      -0.00944291 7508587779166.74609375\n",
+      "EMPCA  3/25      -0.66805796 19626612674664.49218750\n",
+      "EMPCA  4/25      -1.70502271 8378913172062.50195312\n",
+      "EMPCA  5/25      -0.50952619 13981883445256.81835938\n",
+      "EMPCA  6/25       0.03511470 1119479711133.62231445\n",
+      "EMPCA  7/25       0.70291406 1032642921526.45532227\n",
+      "EMPCA  8/25      -0.70700849 2839385991864.42236328\n",
+      "EMPCA  9/25      -0.33988388 1688495507154.19140625\n",
+      "EMPCA 10/25       0.16736269 1172380140548.36303711\n",
+      "EMPCA 11/25       0.46669720 1178862392506.05273438\n",
+      "EMPCA 12/25       0.56626496 537397405062.44665527\n",
+      "EMPCA 13/25       0.41506835 698830863387.42077637\n",
+      "EMPCA 14/25      -0.38187851 3072265870327.18017578\n",
+      "EMPCA 15/25      -1.04082885 17525933648808.51953125\n",
+      "EMPCA 16/25      -0.18623925 4182786094362.81933594\n",
+      "EMPCA 17/25       0.80569183 660983663823.00170898\n",
+      "EMPCA 18/25      -0.78194622 3669661814497.99609375\n",
+      "EMPCA 19/25      -0.38293452 18554019679215.49218750\n",
+      "EMPCA 20/25       0.71544247 2748424540238.88183594\n",
+      "EMPCA 21/25       0.78942523 155341145233.47897339\n",
+      "EMPCA 22/25      -0.21258988 2249782472723.37060547\n",
+      "EMPCA 23/25       0.53052168 7898727359501.25976562\n",
+      "EMPCA 24/25      -0.03652138 3008046649848.63085938\n",
+      "EMPCA 25/25       0.81279005 43370515897.10802460\n",
+      "R2: 1.0\n",
+      "Element runtime (unweighted):\t0.0261096835136  min\n",
+      "Element runtime (weighted):\t0.150146349271  min\n",
+      "var, Vnoise  1.73516707703e-05 3.7819483949e-06\n",
+      "var, Vnoise  1.73516707703e-05 3.7819483949e-06\n",
+      "space \t weight type \t R2_noise \t number of vectors\n",
+      "pixel \t basic weight \t  0.310800202035  \t  more than 14\n",
+      "pixel \t error weight \t  0.310800202035  \t  13\n",
+      "elem \t basic weight \t  0.782041254415  \t  6\n",
+      "elem \t error weight \t  0.782041254415  \t  3\n"
      ]
     }
    ],
@@ -1101,11 +1152,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PIXEL SPACE\n",
+      "number of unusable pixels,  232\n",
+      "nans  (array([], dtype=int64), array([], dtype=int64))\n",
+      "       iter        R2             rchi2\n",
+      "EMPCA  1/25       0.00969792      3.22574603\n",
+      "EMPCA  2/25       0.12933284      3.25863309\n",
+      "EMPCA  3/25       0.22248045      2.57974961\n",
+      "EMPCA  4/25       0.25296077      2.34987900\n",
+      "EMPCA  5/25       0.26509521      2.25776542\n",
+      "EMPCA  6/25       0.26875042      2.23021143\n",
+      "EMPCA  7/25       0.27033791      2.22381101\n",
+      "R2: 0.273616934069\n",
+      "Pixel runtime (unweighted):\t0.939999516805  min\n",
+      "Pixel runtime (weighted):\t0.94955354929  min\n",
+      "var, Vnoise  6.69768516609e-05 7.44195773325e-05\n",
+      "var, Vnoise  6.69768516609e-05 7.44195773325e-05\n",
+      "ELEMENT SPACE\n",
+      "nan  (array([], dtype=int64), array([], dtype=int64))\n",
+      "       iter        R2             rchi2\n",
+      "EMPCA  1/25      -1.64596404 35600173583043.89843750\n",
+      "EMPCA  2/25       0.02426286 42525098442225.28906250\n",
+      "EMPCA  3/25       0.68098385 517466635391.23352051\n",
+      "EMPCA  4/25       0.05655889 22540536629242.94921875\n",
+      "EMPCA  5/25      -0.75135698 48766131827856.41406250\n",
+      "EMPCA  6/25      -1.79459932 18302619385758.65625000\n",
+      "EMPCA  7/25      -0.79362696 53209151245508.46093750\n",
+      "EMPCA  8/25      -0.11588405 7080761603526.59667969\n",
+      "EMPCA  9/25       0.27839315 1681154135278.97509766\n",
+      "EMPCA 10/25      -0.31604821 8884010960401.41406250\n",
+      "EMPCA 11/25      -1.35172071 464017645865344.50000000\n",
+      "EMPCA 12/25      -2.61771697 204915804974314.21875000\n",
+      "EMPCA 13/25       0.53742914 13019180233409.43164062\n",
+      "EMPCA 14/25       0.90482447 8452330010.82232761\n",
+      "EMPCA 15/25      -1.36615290 528657230935500.18750000\n",
+      "EMPCA 16/25      -1.58061571 170386198260521.37500000\n",
+      "EMPCA 17/25       0.55387992 4702767465500.91894531\n",
+      "EMPCA 18/25       0.75940950 4936265046125.40234375\n",
+      "EMPCA 19/25      -0.97563356 22110356024790.33203125\n",
+      "EMPCA 20/25      -1.06656997 84303384406095.35937500\n",
+      "EMPCA 21/25      -0.96819704 2689990975904.18505859\n",
+      "EMPCA 22/25      -1.28336252 99046766806809.40625000\n",
+      "EMPCA 23/25      -4.02332279 40524409448626.45312500\n",
+      "EMPCA 24/25       0.26729528 11240518847713.95117188\n",
+      "EMPCA 25/25      -1.29361850 2358307018694.07128906\n",
+      "R2: 1.0\n",
+      "Element runtime (unweighted):\t0.0242369135221  min\n",
+      "Element runtime (weighted):\t0.153433084488  min\n",
+      "var, Vnoise  1.71612117759e-05 9.08658400461e-06\n",
+      "var, Vnoise  1.71612117759e-05 9.08658400461e-06\n",
+      "space \t weight type \t R2_noise \t number of vectors\n",
+      "pixel \t basic weight \t  -0.11112385081  \t  0\n",
+      "pixel \t error weight \t  -0.11112385081  \t  0\n",
+      "elem \t basic weight \t  0.470516177803  \t  3\n",
+      "elem \t error weight \t  0.470516177803  \t  4\n"
+     ]
+    }
+   ],
    "source": [
     "run run_empca -vug -m red_clump/pickles/models/model_snrCorrect_TEFF_u4800.0_d4750.0.pkl -d 2e-3 -n 14"
    ]
