Syncing with laptop

--- a/test_empca.ipynb
+++ b/test_empca.ipynb
@@ -139,10 +139,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 97,
    "metadata": {
     "collapsed": false,
     "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "def weight(elem,vec):\n",
+    "    w = elemwindows[elem]\n",
+    "    nw = np.ma.masked_array(pf.normweights(w))\n",
+    "    return np.ma.sum(nw*vec)\n",
+    "    \n",
+    "def test_run(specs,noise,deltR2,nvecs):\n",
+    "    m1,m2,w1,w2 = pix_empca('nonvar',falsespecs.T,noise,'test.pkl',nvecs=nvecs,deltR2=2e-3,gen=True)\n",
+    "    resize_pix_eigvecs(falsespecs.T,m1,nstars=5)\n",
+    "    resize_pix_eigvecs(falsespecs.T,m2,nstars=5)\n",
+    "    m1elem = np.zeros((nvecs,len(elems)))\n",
+    "    m2elem = np.zeros((nvecs,len(elems)))\n",
+    "    for ind in range(len(elems)):\n",
+    "        for vec in range(5):\n",
+    "            m1elem[vec][ind] = weight(elems[ind],m1.eigvec[vec])\n",
+    "            m2elem[vec][ind] = weight(elems[ind],m2.eigvec[vec])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -156,33 +182,7 @@
     }
    ],
    "source": [
-    "m1,m2,w1,w2 = pix_empca('nonvar',falsespecs.T,noise,'test.pkl',deltR2=2e-3,gen=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import run_empca\n",
-    "reload(run_empca)\n",
-    "from run_empca import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "resize_pix_eigvecs(falsespecs.T,m1,nstars=5)\n",
-    "resize_pix_eigvecs(falsespecs.T,m2,nstars=5)"
+    "test_run(falsespecs,noise,2e-3,5)"
    ]
   },
   {
