Performing various tests

--- a/MAD_test.ipynb
+++ b/MAD_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -46,20 +46,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "mean = 0\n",
-    "one = 0.1*np.random.randn(100)+mean\n",
-    "two = 0.5*np.random.randn(100)+mean"
+    "numpts = 10000\n",
+    "var1 = 0.1\n",
+    "var2 = 0.5\n",
+    "one = np.sqrt(var1)*np.random.randn(numpts)+mean\n",
+    "two = np.sqrt(var2)*np.random.randn(numpts)+mean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -70,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -78,10 +81,10 @@
     {
      "data": {
       "text/plain": [
-       "(0.33817573270590112, 0.11436282619117306, 0.032060093916232053)"
+       "(0.54972259776514121, 0.30219493449365525, 0.20158905187076953)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -100,10 +103,10 @@
     {
      "data": {
       "text/plain": [
-       "(0.094531306876771928, 0.0089361679798304269, 0.0097211212447424721)"
+       "(0.31339380766224401, 0.098215678681039573, 0.098131585232912891)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -122,10 +125,10 @@
     {
      "data": {
       "text/plain": [
-       "(0.4680834531492547, 0.21910211911213051, 0.29678732735121099)"
+       "(0.711459197321888, 0.50617418945390513, 0.50212772653766258)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,10 +138,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
    "source": []
   }
  ],
