Cross bitmask with no SNR restriction

--- a/Cross bitmask DR12 and DR13.ipynb
+++ b/Cross bitmask DR12 and DR13.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -12,13 +12,6 @@
      "output_type": "stream",
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/lib/python2.7/site-packages/setuptools-18.7.1-py2.7.egg/pkg_resources/__init__.py:1266: UserWarning: /home/price-jones/.python-eggs is writable by group/others and vulnerable to attack when used with get_resource_filename. Consider a more secure location (set with .set_extraction_path or the PYTHON_EGG_CACHE environment variable).\n"
      ]
     }
    ],
@@ -30,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -57,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -85,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -97,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -121,7 +114,7 @@
     "rc13.teff = rc13.teff[crossover13]\n",
     "rc13.logg = rc13.logg[crossover13]\n",
     "rc13.fe_h = rc13.fe_h[crossover13]\n",
-    "rc13._maskHere = rc13._maskHere | (rc13.spectra/rc13.spectra_errs < 50.)\n",
+    "#rc13._maskHere = rc13._maskHere | (rc13.spectra/rc13.spectra_errs < 50.)\n",
     "rc13.applyMask()"
    ]
   },
@@ -139,7 +132,7 @@
     "rc12.teff = rc12.teff[crossover12]\n",
     "rc12.logg = rc12.logg[crossover12]\n",
     "rc12.fe_h = rc12.fe_h[crossover12]\n",
-    "rc12._maskHere = rc12._maskHere | (rc12.spectra/rc12.spectra_errs < 50.)\n",
+    "#rc12._maskHere = rc12._maskHere | (rc12.spectra/rc12.spectra_errs < 50.)\n",
     "rc12.applyMask()"
    ]
   },
@@ -162,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -171,7 +164,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.445186771755 5.16475616429e-05 9.30899968018e-05\n"
+      "-13172.3815121 2.15014444341 0.000163218869918\n"
      ]
     }
    ],
@@ -183,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -191,7 +184,9 @@
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": []
+     "text": [
+      "fit:  67%|██████▋   | 4801/7214 [01:22<00:30, 80.42it/s]"
+     ]
     }
    ],
    "source": [
@@ -200,19 +195,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.573536294861 4.02171970793e-05 9.4303915186e-05\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Vdata12 = np.ma.var(rc12.residuals)\n",
     "Vnoise12 = np.ma.mean(rc12.spectra_errs**2)\n",
@@ -277,7 +264,8 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
