--- a/Gaia Open Cluster.ipynb
+++ b/Gaia Open Cluster.ipynb
@@ -34,6 +34,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['M107',\n",
+       " 'M13',\n",
+       " 'M15',\n",
+       " 'M2',\n",
+       " 'M3',\n",
+       " 'M35',\n",
+       " 'M5',\n",
+       " 'M53',\n",
+       " 'M67',\n",
+       " 'M71',\n",
+       " 'M92',\n",
+       " 'N188',\n",
+       " 'N2158',\n",
+       " 'N2420',\n",
+       " 'N4147',\n",
+       " 'N5466',\n",
+       " 'N6791',\n",
+       " 'N6819',\n",
+       " 'N7789',\n",
+       " 'Pleiades']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import astropy\n",
+    "filename='../clusterdata/aj485195t4_mrt.txt'\n",
+    "data= astropy.io.ascii.read(filename)\n",
+    "list(np.unique(data['Cluster']))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "collapsed": true
