--- a/Gaia Cluster Localization.ipynb
+++ b/Gaia Cluster Localization.ipynb
@@ -88,7 +88,8 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
