Added title to notebook

--- a/spectralspace/examples/RC_dimensionality_plots.ipynb
+++ b/spectralspace/examples/RC_dimensionality_plots.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# A Notebook to Create Plots for Price-Jones & Bovy 2017"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -106,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
