Made example notebook paths default

--- a/spectralspace/examples/RC_dimensionality_plots.ipynb
+++ b/spectralspace/examples/RC_dimensionality_plots.ipynb
@@ -52,14 +52,19 @@
     "import matplotlib\n",
     "font = {'family': 'serif',\n",
     "        'weight': 'normal',\n",
-    "        'size'  :  18 # Tune this according to personal preference\n",
+    "        'size'  :  18\n",
     "}\n",
     "\n",
     "matplotlib.rc('font',**font)\n",
     "\n",
     "default_cmap = 'plasma'\n",
-    "datadir = '/geir_data/scr/price-jones/Data/apogee_dim_reduction/'\n",
-    "figdir = '/home/price-jones/Documents/rc_dim_paper'"
+    "datadir = './data/'\n",
+    "figdir = './fig/'\n",
+    "if not os.path.exists(datadir):\n",
+    "    os.system('mkdir -p {0}'.format(datadir))\n",
+    "    \n",
+    "if not os.path.exists(figdir):\n",
+    "    os.system('mkdir -p {0}'.format(figdir))"
    ]
   },
   {
