Added slightly more documentation

--- a/spectralspace/examples/RC_dimensionality_plots.ipynb
+++ b/spectralspace/examples/RC_dimensionality_plots.ipynb
@@ -450,7 +450,9 @@
     "Upper limit (Enter for maximum): 300  \n",
     "Lower limit (Enter for minimum): 100  \n",
     "Found good limits  \n",
-    "And/or? done```"
+    "And/or? done```\n",
+    "\n",
+    "#### This box will take a few minutes to run"
    ]
   },
   {
@@ -692,7 +694,9 @@
     "Data key: CLUSTER  \n",
     "Default is full range. Match or slice? match  \n",
     "Match value: N6819   \n",
-    "And/or? done  ```"
+    "And/or? done  ```\n",
+    "\n",
+    "#### This box will run in a minute or two"
    ]
   },
   {
@@ -818,7 +822,9 @@
     "Upper limit (Enter for maximum): 300  \n",
     "Lower limit (Enter for minimum): 100  \n",
     "Found good limits  \n",
-    "And/or? done```"
+    "And/or? done```\n",
+    "\n",
+    "#### This box will run in a minute or two"
    ]
   },
   {
@@ -950,7 +956,9 @@
     "Upper limit (Enter for maximum): 300  \n",
     "Lower limit (Enter for minimum): 100  \n",
     "Found good limits  \n",
-    "And/or? done```"
+    "And/or? done```\n",
+    "\n",
+    "#### This box will run in a minute or two"
    ]
   },
   {
@@ -1123,9 +1131,9 @@
    },
    "source": [
     "### To create the data for this figure, an external script is needed\n",
-    "Run **rc_example_method_comp.py** 3 times after modifying the `datadir` variable to match the one defined at the top of this notebook (local directory by default).\n",
+    "Run **rc_example_method_comp.py** 3 times after modifying the `datadir` variable to match the one defined at the top of this notebook (local directory by default). Each run takes of order a day to complete, so consider running them in parallel and use a tool like [screen](https://www.gnu.org/software/screen/manual/screen.html) to allow them to run in the background.\n",
     "\n",
-    "The script will prompt for responses for each of the three runs, which can be run in parallel. Each will create subsamples of the full sample to use in jackknifing - the number run in parallel at a given time is controlled by the `maxsamp` parameter at the top of the file. Fill out the prompts for each run with the responses given below.\n",
+    "The script will prompt for responses for each of the three runs. Each will create subsamples of the full sample to use in jackknifing - the number of subsamples run in parallel at a given time is controlled by the `maxsamp` parameter at the top of the file. Fill out the prompts for each run with the responses given below.\n",
     "\n",
     "#### First run\n",
     "\n",
@@ -1275,9 +1283,9 @@
    "source": [
     "### This plot also requires an external script to generate data\n",
     "\n",
-    "Run **sample_jackknife.py** 5 times after modifying the `datadir` variable to match the one defined at the top of this notebook (local directory by default).\n",
+    "Run **sample_jackknife.py** 5 times after modifying the `datadir` variable to match the one defined at the top of this notebook (local directory by default). Each run takes of order a day to complete, so consider running them in parallel and use a tool like [screen](https://www.gnu.org/software/screen/manual/screen.html) to allow them to run in the background.\n",
     "\n",
-    "The script will prompt for responses for each of the five runs, which can be run in parallel. Each will create subsamples of the full sample to use in jackknifing - the number run in parallel at a given time is controlled by the `maxsamp` parameter at the top of the file. Fill out the prompts for each run with the responses given below.\n",
+    "The script will prompt for responses for each of the five runs. Each will create subsamples of the full sample to use in jackknifing - the number of subsamples run in parallel at a given time is controlled by the `maxsamp` parameter at the top of the file.  Fill out the prompts for each run with the responses given below.\n",
     "\n",
     "For strict reproduction, one also needs to fix the random seed to be consistent. This will only ensure reproducability on the same machine, not between users, but I've put the random seeds used by the authors for each run, which can be set by changing the `seed` variable.\n",
     "\n",
@@ -1586,10 +1594,6 @@
     }
    ],
    "source": [
-    "import pc_plotter\n",
-    "reload(pc_plotter)\n",
-    "from pc_plotter import *\n",
-    "\n",
     "direcs = ['{0}/red_clump_12_TEFF_up4900.0_lo4700.0_MEANFIB_up300.0_lo100.0/bm7935'.format(datadir)]\n",
     "# Number of eigenvectors to plot\n",
     "n=10\n",
@@ -1607,15 +1611,6 @@
     "plot_fullvec((eigvec*medcoeff)[:n],n=n,pixup=pixup,pixdown=pixdown,oset=oset,ncol = 4,cmap='plasma',maxval=0.67)\n",
     "plt.savefig('{0}/median_scaled_eigvec.pdf'.format(figdir))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
